--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <h2>Latest releases of the FHIR tools:</h2>
 
 <ul>
- <li>Validator: ??</li>
- <li>Publisher: ??</li>
+ <li>Validator: <a href="https://fhir.github.io/latest-ig-publisher/org.hl7.fhir.validator.jar">v3.8.4</a></li>
+ <li>Publisher: <a href="https://fhir.github.io/latest-ig-publisher/org.hl7.fhir.publisher.jar">v0.9.33</a></li>
 </ul>
 
 </body>
