--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <h2>Latest releases of the FHIR tools:</h2>
 
 <ul>
+ <li>Test-Cases: <a href="https://fhir.github.io/latest-ig-publisher/test-cases.zip">v1.0.14</a></li>
  <li>Validator: <a href="https://fhir.github.io/latest-ig-publisher/org.hl7.fhir.validator.jar">v4.1.22</a></li>
  <li>Publisher: <a href="https://fhir.github.io/latest-ig-publisher/org.hl7.fhir.publisher.jar">v1.0.17</a></li>
 </ul>
