Add release notes

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <h2>Latest releases of the FHIR tools:</h2>
 
 <ul>
- <li>Test-Cases: <a href="https://fhir.github.io/latest-ig-publisher/test-cases.zip">v1.0.39</a></li>
- <li>Validator: <a href="https://fhir.github.io/latest-ig-publisher/org.hl7.fhir.validator.jar">v4.1.60</a></li>
- <li>Publisher: <a href="https://fhir.github.io/latest-ig-publisher/org.hl7.fhir.publisher.jar">v1.0.61</a></li>
+ <li>Test-Cases: <a href="https://fhir.github.io/latest-ig-publisher/test-cases.zip">v1.0.39</a> <a href="release-notes-test-cases.md">Release Notes</a></li>
+ <li>Validator: <a href="https://fhir.github.io/latest-ig-publisher/org.hl7.fhir.validator.jar">v4.1.60</a> <a href="release-notes-validator.md">Release Notes</a></li>
+ <li>Publisher: <a href="https://fhir.github.io/latest-ig-publisher/org.hl7.fhir.publisher.jar">v1.0.61</a> <a href="release-notes-publisher.md">Release Notes</a></li>
 </ul>
 
 </body>
