--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <h2>Latest releases of the FHIR tools:</h2>
 
 <ul>
- <li>Test-Cases: <a href="https://fhir.github.io/latest-ig-publisher/test-cases.zip">v1.1.8</a> <a href="release-notes-test-cases.html">Release Notes</a></li>
- <li>Validator: <a href="https://fhir.github.io/latest-ig-publisher/org.hl7.fhir.validator.jar">v4.2.20</a> <a href="release-notes-validator.html">Release Notes</a></li>
- <li>Publisher: <a href="https://fhir.github.io/latest-ig-publisher/org.hl7.fhir.publisher.jar">v1.0.82</a> <a href="release-notes-publisher.html">Release Notes</a></li>
+ <li>Test-Cases: <a href="https://storage.googleapis.com/ig-build/test-cases.zip">v1.1.8</a> <a href="release-notes-test-cases.html">Release Notes</a></li>
+ <li>Validator: <a href="https://storage.googleapis.com/ig-build/org.hl7.fhir.validator.jar">v4.2.20</a> <a href="release-notes-validator.html">Release Notes</a></li>
+ <li>Publisher: <a href="https://storage.googleapis.com/ig-build/org.hl7.fhir.publisher.jar">v1.0.82</a> <a href="release-notes-publisher.html">Release Notes</a></li>
 </ul>
 
 </body>
